# plover-practice-plugin

./: README.md  setup.cfg
.github/workflows/: release.yml
plover_practice_plugin/: extension.py  meta.py
