[metadata]
name = plover_practice_plugin
description = Plover practice plugin
long_description = file: README.md
long_description_content_type = text/markdown
keywords = plover plover_plugin
version = 0.0.1

[options]
zip_safe = True
install_requires =
    plover>=4.0.0.dev12
setup_requires =
    setuptools>=30.3.0
packages =
    plover_practice_plugin

[options.entry_points]
plover.command =
    # "{:COMMAND:OPEN_URL:https://www.openstenoproject.org/}"
    open_url = plover_practice_plugin.command:open_url
plover.meta =
    # "{:RANDOM_NUMBER:1:100}"
    random_number = plover_practice_plugin.meta:random_number
    # "{:GET_ENV_VAR:$USER}"
    get_env_var = plover_practice_plugin.meta:get_env_var
