[metadata]
author = Paul Fioravanti
author_email = paul@paulfioravanti.com
classifiers =
    Development Status :: 4 - Beta
    Environment :: Plugins
    Intended Audience :: End Users/Desktop
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
description = Plover practice plugin
keywords = plover plover_plugin
license = GNU General Public License v3 or later (GPLv3+)
long_description = file: README.md
long_description_content_type = text/markdown
name = plover_practice_plugin
url = https://github.com/paulfioravanti/plover-practice-plugin
version = 0.0.1

[options]
zip_safe = True
install_requires =
    plover>=4.0.0.dev12
setup_requires =
    setuptools>=30.3.0
packages =
    plover_practice_plugin

[options.entry_points]
plover.command =
    # "{:COMMAND:OPEN_URL:https://www.openstenoproject.org/}"
    open_url = plover_practice_plugin.command:open_url
plover.meta =
    # "{:RANDOM_NUMBER:1:100}"
    random_number = plover_practice_plugin.meta:random_number
plover.extension =
    # "{:GET_ENV_VAR:$USER}"
    plover_practice_plugin = plover_practice_plugin.extension:PracticePlugin
